fix: add workflow-level filtering and secure prompt handling
- Add if condition to workflow to only run on PRs or @continue-agent mentions
- Prevent workflow from running on every issue comment (security fix)
- Implement secure handling of custom prompts after @continue-agent
- Sanitize input by using temp files and treating as data, not code
- Support custom review instructions: '@continue-agent focus on security'
- Add example usage documentation

This addresses the security concern about exposing secrets on every comment
while adding support for custom review prompts in a secure way.

--- a/.github/workflows/test-continue-agent.yml
+++ b/.github/workflows/test-continue-agent.yml
@@ -14,6 +14,12 @@ permissions:
 
 jobs:
   review:
+    # Only run on PRs (for automatic reviews) or when @continue-agent is mentioned in a comment
+    if: |
+      github.event_name == 'pull_request' || 
+      (github.event_name == 'issue_comment' && 
+       github.event.issue.pull_request && 
+       contains(github.event.comment.body, '@continue-agent'))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
